--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 </head>
 <body>
     <div id="frame-container">
-        <iframe id="embeddedPage" src="https://v0-new-project-crx0aelhxmx.vercel.app/"></iframe>
+        <iframe id="embeddedPage" src="https://friendly-sopapillas-5be739.netlify.app/"></iframe>
     </div>
 </body>
+
 </html>
