--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 </head>
 <body>
     <div id="frame-container">
-        <iframe id="embeddedPage" src="https://friendly-sopapillas-5be739.netlify.app/"></iframe>
+        <iframe id="embeddedPage" src="https://hauna-order-form.netlify.app/order"></iframe>
     </div>
 </body>
 
 </html>
+
